# esp32Pet

./: .gitignore  README.md
assets/sprites/: sprites.json
desktop-client/: index.html  package-lock.json  package.json  vite.config.ts
desktop-client/src/: App.tsx  styles.css
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/src-tauri/src/: lib.rs  main.rs
desktop-client/src/components/: DevicePanel.tsx  MonitorPanel.tsx  StatePanel.tsx  TextPanel.tsx
desktop-client/src/services/: activeWindow.ts  api.ts  device.ts
docs/: HANDOFF.md  PROGRESS-2026-06.md  SD-CARD-LOG-2026-06-19.md  SETUP-NEW-MACHINE.md  SPRITES.md  WIFI-SETUP.md  WINDOW-STATE-MONITOR.md
esp32-firmware/: platformio.ini
esp32-firmware/include/: deskpet_config.example.h
esp32-firmware/src/: main.cpp
scripts/: window-state-map.json  window-state-monitor.ps1
